--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 alembic==1.9.2
 anyio==3.6.2
 asyncpg==0.27.0
+bcrypt==4.0.1
+cffi==1.15.1
 click==8.1.3
+cryptography==39.0.0
+dnspython==2.3.0
+ecdsa==0.18.0
+email-validator==1.3.1
 fastapi==0.89.1
 flake8==5.0.4
 flake8-broken-line==0.6.0
@@ -16,12 +22,19 @@ isort==5.12.0
 Mako==1.2.4
 MarkupSafe==2.1.2
 mccabe==0.7.0
+passlib==1.7.4
 pep8-naming==0.13.3
+pyasn1==0.4.8
 pycodestyle==2.9.1
+pycparser==2.21
 pydantic==1.10.4
 pyflakes==2.5.0
 python-dotenv==0.21.0
+python-jose==3.3.0
+python-multipart==0.0.5
 PyYAML==6.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.46
 starlette==0.22.0
